--- a/DiageoMDMWeb/src/main/resources/com/diageo/diageomdmweb/label/Labels.properties
+++ b/DiageoMDMWeb/src/main/resources/com/diageo/diageomdmweb/label/Labels.properties
@@ -112,6 +112,7 @@ m_report_outlet_pendding=Outlets pendientes
 m_report_user=Reporte por usuario
 m_report_casuistry=Casu\u00edsticas
 m_report_distri=Reporte por distribuidor
+report_seller=Reporte Vendedores
 ###SALES
 m_sales_create=Crear Vendedor
 m_sales_search=Consultar Vendedor
@@ -370,3 +371,7 @@ name_tmc_kam=Nombre TMC/KAM
 rol_cpa=Rol CP&A
 name_cpa=Nombre CP&A
 administrator_code=C\u00f3digo Administrador
+territory=Territorio
+modification_date=Fecha Modificaci\u00f3n
+modification_user=Usuario que Modific\u00f3
+report_duplicates=Reporte Duplicados
