--- a/DiageoMDMWeb/src/main/resources/com/diageo/diageomdmweb/label/Labels.properties
+++ b/DiageoMDMWeb/src/main/resources/com/diageo/diageomdmweb/label/Labels.properties
@@ -375,3 +375,6 @@ territory=Territorio
 modification_date=Fecha Modificaci\u00f3n
 modification_user=Usuario que Modific\u00f3
 report_duplicates=Reporte Duplicados
+chain_meg_code_ean=El c\u00f3digo EAN, ya se encuentra asignado
+agreement=Acuerdo Comercial
+outlet_agreement_msg=La segmentaci\u00f3n no se puede cambiar, ya que tiene un acuerdo comercial
