--- a/DiageoMDMWeb/src/main/resources/com/diageo/diageomdmweb/label/Labels.properties
+++ b/DiageoMDMWeb/src/main/resources/com/diageo/diageomdmweb/label/Labels.properties
@@ -378,3 +378,10 @@ report_duplicates=Reporte Duplicados
 chain_meg_code_ean=El c\u00f3digo EAN, ya se encuentra asignado
 agreement=Acuerdo Comercial
 outlet_agreement_msg=La segmentaci\u00f3n no se puede cambiar, ya que tiene un acuerdo comercial
+sons=Hijo ID
+son=Hijo
+search_sons=Buscar Hijos
+msg_son_exist=El outlet que intenta agregar ya existe
+msg_son_fild_required=Debe diligenciar el campo del hijo que desea agregar
+fascia=Fascia
+owner=Owner
